// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model #create creates and returns the expected record 1`] = `
Instance {
  "action_record_id": "new-uuid",
  "created_at": "2009-07-12T20:10:41Z",
  "issue_number": 4,
  "login": "matchai",
  "modelName": "user",
}
`;

exports[`Model #findOne returns the expected record 1`] = `
Instance {
  "action_record_id": "29da0a67-062a-46f8-b397-7eac68513492",
  "created_at": "2009-07-12T20:10:41Z",
  "foo": true,
  "issue_number": 1,
  "login": "JasonEtco",
  "modelName": "user",
}
`;
